# sw

./: .gitignore  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  sw.pc.in  tr_test.sce
doc/: Doxyfile  Makefile.am  Makefile.mk
m4/: sw_compiler.m4  sw_coverage.m4  sw_doxygen.m4  sw_tests.m4
src/: Makefile.am
src/lib/: Makefile.mk  sw.h  sw_forward.h  sw_mra.c  sw_mra.h  sw_mra.x  sw_rk.c  sw_rk.h  sw_scale_fct.c  sw_scale_fct.h  sw_scale_fct_base.x  sw_spline.c  sw_spline.h  sw_sweldens.c  sw_sweldens.h  sw_utils.c  sw_utils.h  sw_wavelet.c  sw_wavelet.h  sw_wavelet.x  sw_weights.c  sw_weights.h  sw_weights2.c
src/lib/algebra/: sw_polynomial.c  sw_polynomial.h  sw_rational.c  sw_rational.h  sw_system.c  sw_system.h
src/lib/tr/: tr.c  tr.h  tr_field.c  tr_field.h  tr_rk.c  tr_rk.h
src/tests/: Makefile.am  Makefile.mk  sw_suite.c
